--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 
         iframe {
             border: none;
-            width: 100%;
-            height: 600px;
+            width: 100vw;
+            height: 100vh;
             display: block;
         }
 
