--- a/index.html
+++ b/index.html
@@ -4,49 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lakewood Commons Calendar</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         body {
-            font-family: Arial, sans-serif;
             margin: 0;
-            padding: 20px;
+            padding: 0;
             background-color: #f4f4f4;
-            color: #333;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
-        }
-
-        .calendar-container {
-            background: white;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            overflow: hidden;
-            max-width: 90%;
-            width: 800px;
+            overflow: hidden; /* Prevent scrollbars */
         }
 
         iframe {
             border: none;
-            width: 100vw;
-            height: 100vh;
+            width: 100vw;  /* Full width */
+            height: 100vh; /* Full height */
             display: block;
-        }
-
-        @media (max-width: 800px) {
-            iframe {
-                height: 400px; /* Adjust height for smaller screens */
-            }
         }
     </style>
 </head>
 <body>
 
-<div class="calendar-container">
-    <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FNew_York&bgcolor=%2374f2d3&title=Lakewood%20Commons%20Simcha's%20Calendar&src=bGFrZXdvb2Rjb21tb25zY2hhc3VuYWZ1bmRAZ21haWwuY29t&src=MDZiZTQ1YTQ3MDE5OTM4N2ZiYmQwZGNmZmI3Mjg4ZDMwODNlYzUxMzc3YjY0OTc1YjllNGMzMGExMjViNmM4ZUBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23039BE5&color=%238E24AA" scrolling="no"></iframe>
-</div>
+<iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FNew_York&bgcolor=%2374f2d3&title=Lakewood%20Commons%20Simcha's%20Calendar&src=bGFrZXdvb2Rjb21tb25zY2hhc3VuYWZ1bmRAZ21haWwuY29t&src=MDZiZTQ1YTQ3MDE5OTM4N2ZiYmQwZGNmZmI3Mjg4ZDMwODNlYzUxMzc3YjY0OTc1YjllNGMzMGExMjViNmM4ZUBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23039BE5&color=%238E24AA" scrolling="no"></iframe>
 
 </body>
 </html>
-
