Update calendar link

--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
 </head>
 <body>
 
-<iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FNew_York&bgcolor=%2374f2d3&title=Lakewood%20Commons%20Simcha's%20Calendar&src=bGFrZXdvb2Rjb21tb25zY2hhc3VuYWZ1bmRAZ21haWwuY29t&src=MDZiZTQ1YTQ3MDE5OTM4N2ZiYmQwZGNmZmI3Mjg4ZDMwODNlYzUxMzc3YjY0OTc1YjllNGMzMGExMjViNmM4ZUBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23039BE5&color=%238E24AA" scrolling="no"></iframe>
-
+<iframe src="https://calendar.google.com/calendar/embed?src=06be45a470199387fbbd0dcffb7288d3083ec51377b64975b9e4c30a125b6c8e%40group.calendar.google.com&ctz=America%2FNew_York" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
 </body>
 </html>
